feat(security/java21): correcoes de seguranca e modernizacao idiomática com Java 21
- Protegido upload de anexos de tickets com autenticacao JWT e validacao de extensoes/MIME types permitidos
- Removido token de integracao hardcoded do BlipTokenSecurityFilter e externalizado para variaveis de ambiente
- Adicionado controle de acesso baseado em roles (@PreAuthorize) no DoctorConfigurationController
- Implementadas Sealed Interfaces e Pattern Matching for Switch para acoes de grupo do Blip (BlipGroupAction)
- Adotadas Sequenced Collections (.getFirst()) do Java 21 nos adaptadores e servicos
- Atualizados application.properties e .env.example com a variavel BLIP_INTEGRATION_TOKEN